--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "Electron Boilerplate",
   "version": "1.0.0",
   "description": "Electron + React + Redux + Webpack 2 boilerplate",
-  "main": "build/main.js",
+  "main": "build/app/main.js",
   "scripts": {
     "postinstall": "install-app-deps",
     "start": "electron .",
