--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ STATS=true
 # Download devtools extensions
 # default: false
 DL_EXTENSIONS=true
+
+# Github access token.
+# Required for github auto updates with private repositories.
+# https://github.com/electron-userland/electron-builder/wiki/Auto-Update#private-github-update-repo
+GH_TOKEN=
