--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:main": "better-npm-run build:main",
     "build:renderer": "better-npm-run build:renderer",
     "dist": "build",
+    "translate": "babel-node ./scripts/translate.js ./src/locales/translations/descriptions.json",
     "clean": "npm run clean:build && npm run clean:dist",
     "clean:build": "rimraf ./build/app",
     "clean:dist": "rimraf ./dist"
@@ -59,9 +60,11 @@
     "eslint-plugin-react": "^7.0.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
+    "glob": "^7.1.2",
     "google-fonts-webpack-plugin": "^0.3.1",
     "html-webpack-harddisk-plugin": "^0.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "json-loader": "^0.5.4",
     "material-design-icons": "^3.0.1",
     "postcss": "^6.0.1",
     "postcss-cssnext": "^2.9.0",
@@ -74,6 +77,7 @@
     "stylelint": "^7.8.0",
     "stylelint-config-css-modules": "^1.0.0",
     "stylelint-config-standard": "^16.0.0",
+    "util.promisify": "^1.0.0",
     "webpack": "^2.6.1",
     "webpack-assets-manifest": "^0.6.2",
     "webpack-bundle-analyzer": "^2.3.1",
@@ -88,8 +92,10 @@
     "sass-loader": "^6.0.3"
   },
   "dependencies": {
+    "babel-plugin-react-intl": "^2.3.1",
     "babel-polyfill": "^6.22.0",
     "fs": "0.0.1-security",
+    "intl": "^1.2.5",
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
