Using cross-env instead of better-npm-scripts

--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "start": "electron .",
     "prewatch": "npm run build:main",
     "watch": "webpack-dev-server --config=./webpack/devServer.babel.js --hot --inline",
-    "build": "better-npm-run build",
-    "build:main": "better-npm-run build:main",
-    "build:renderer": "better-npm-run build:renderer",
+    "build": "webpack --config=webpack/config.babel.js --progress --colors",
+    "build:dev": "cross-env NODE_ENV=development npm run build --",
+    "build:prod": "cross-env NODE_ENV=production npm run build --",
+    "build:main": "webpack --config=webpack/bundles/main.babel.js --progress --colors",
+    "build:renderer": "webpack --config=webpack/bundles/renderer.babel.js --progress --colors",
+    "pack": "build --dir",
     "dist": "build",
+    "dist:win": "build --win",
+    "dist:mac": "build --mac",
+    "dist:linux": "build --linux",
     "translate": "babel-node ./scripts/translate.js ./src/locales/translations/descriptions.json",
     "clean": "npm run clean:build && npm run clean:dist",
     "clean:build": "rimraf ./build/app",
@@ -45,7 +51,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-1": "^6.22.0",
-    "better-npm-run": "0.0.15",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.0",
     "devtron": "^1.4.0",
     "dotenv": "^4.0.0",
