--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "babel-polyfill": "^6.22.0",
     "fs": "0.0.1-security",
     "intl": "^1.2.5",
+    "is-electron-renderer": "^2.0.1",
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
