--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "start": "electron .",
     "prewatch": "yarn run build:main",
     "watch": "webpack-dev-server --config=./webpack/devServer.babel.js --hot --inline",
-    "build": "webpack --config=webpack/config.babel.js --progress --colors",
+    "build": "webpack --config=webpack/config.babel.js",
     "build:dev": "cross-env NODE_ENV=development yarn run build --",
     "build:prod": "cross-env NODE_ENV=production yarn run build --",
-    "build:main": "webpack --config=webpack/bundles/main.babel.js --progress --colors",
-    "build:renderer": "webpack --config=webpack/bundles/renderer.babel.js --progress --colors",
+    "build:main": "webpack --config=webpack/bundles/main.babel.js",
+    "build:renderer": "webpack --config=webpack/bundles/renderer.babel.js",
     "pack": "build --dir",
     "dist": "build",
     "dist:win": "build --win",
