--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "build:prod": "cross-env NODE_ENV=production yarn run build --",
     "build:main": "webpack --config=webpack/bundles/main.babel.js",
     "build:renderer": "webpack --config=webpack/bundles/renderer.babel.js",
+    "lint": "eslint src",
     "pack": "build --dir",
     "dist": "build",
     "dist:win": "build --win",
     "dist:mac": "build --mac",
     "dist:linux": "build --linux",
     "translate": "babel-node --presets es2015 -- ./scripts/translate.js -o ./src/locales/translations -l en",
-    "clean": "yarn run clean:build && yarn run clean:dist",
+    "clean": "yarn run clean:build & yarn run clean:dist",
     "clean:build": "rimraf ./build/app",
     "clean:dist": "rimraf ./dist"
   },
@@ -49,11 +50,12 @@
     "electron-builder": "^18.1.0",
     "electron-debug": "^1.1.0",
     "electron-devtools-installer": "^2.2.0",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "glob": "^7.1.2",
