--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
     "postcss-url": "^6.0.4",
+    "prop-types": "^15.5.10",
     "react-hot-loader": "^3.0.0-beta.7",
     "rimraf": "^2.6.1",
     "style-loader": "^0.18.1",
@@ -91,7 +92,6 @@
     "sass-loader": "^6.0.3"
   },
   "dependencies": {
-    "babel-plugin-react-intl": "^2.3.1",
     "babel-polyfill": "^6.26.0",
     "fs": "0.0.1-security",
     "intl": "^1.2.5",
