--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "url": "https://github.com/gabiseabra/electron-boilerplate.git"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-react-intl": "^2.3.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
