Updated electron dependencies

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Electron + React + Redux + Webpack 2 boilerplate",
   "main": "build/app/main.js",
   "scripts": {
-    "postinstall": "install-app-deps",
+    "postinstall": "electron-builder install-app-deps",
     "start": "electron .",
     "prewatch": "yarn run build:main",
     "watch": "webpack-dev-server --config=./webpack/devServer.babel.js --hot --inline",
@@ -15,11 +15,11 @@
     "build:main": "webpack --config=webpack/bundles/main.babel.js",
     "build:renderer": "webpack --config=webpack/bundles/renderer.babel.js",
     "lint": "eslint src",
-    "pack": "build --dir",
-    "dist": "build",
-    "dist:win": "build --win",
-    "dist:mac": "build --mac",
-    "dist:linux": "build --linux",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
+    "dist:win": "electron-builder --win",
+    "dist:mac": "electron-builder --mac",
+    "dist:linux": "electron-builder --linux",
     "translate": "babel-node --presets es2015 -- ./scripts/translate.js -o ./src/locales/translations -l en",
     "clean": "yarn run clean:build & yarn run clean:dist",
     "clean:build": "rimraf ./build/app",
@@ -48,9 +48,9 @@
     "css-loader": "^0.28.0",
     "devtron": "^1.4.0",
     "dotenv": "^4.0.0",
-    "electron": "^1.6.2",
-    "electron-builder": "^18.1.0",
-    "electron-debug": "^1.1.0",
+    "electron": "^1.7.5",
+    "electron-builder": "^19.27.2",
+    "electron-debug": "^1.4.0",
     "electron-devtools-installer": "^2.2.0",
     "eslint": "^4.5.0",
     "eslint-config-airbnb": "^15.1.0",
