--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "electron-builder": "^19.27.2",
     "electron-debug": "^1.4.0",
     "electron-devtools-installer": "^2.2.0",
+    "enhanced-resolve": "^3.4.1",
     "eslint": "^4.5.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-import-resolver-webpack": "^0.8.3",
