--- a/package.json
+++ b/package.json
@@ -61,12 +61,12 @@
     "eslint-plugin-react": "^7.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.1",
+    "flat": "^4.0.0",
     "glob": "^7.1.2",
     "google-fonts-webpack-plugin": "^0.4.2",
     "html-webpack-harddisk-plugin": "^0.1.0",
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
-    "material-design-icons": "^3.0.1",
     "postcss": "^6.0.1",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^10.0.0",
@@ -99,13 +99,14 @@
     "fs": "0.0.1-security",
     "intl": "^1.2.5",
     "is-electron-renderer": "^2.0.1",
+    "material-ui": "next",
+    "material-ui-icons": "^1.0.0-beta.5",
     "path": "^0.12.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-intl": "^2.3.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.7.2",
     "redux-saga": "^0.15.6",
     "semver-utils": "^1.1.1"
