Added npm publish script

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dist:win": "electron-builder --win",
     "dist:mac": "electron-builder --mac",
     "dist:linux": "electron-builder --linux",
+    "publish": "electron-builder --publish onTagOrDraft",
     "translate": "babel-node --presets es2015 -- ./scripts/translate.js -o ./src/locales/translations -l en",
     "clean": "yarn run clean:build & yarn run clean:dist",
     "clean:build": "rimraf ./build/app",
