Added unit tests

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "prewatch": "yarn run build:main",
     "watch": "webpack-dev-server --config=./webpack/devServer.babel.js --hot --inline",
     "build": "webpack --config=webpack/config.babel.js",
+    "build:test": "cross-env NODE_ENV=test yarn run build --",
     "build:dev": "cross-env NODE_ENV=development yarn run build --",
     "build:prod": "cross-env NODE_ENV=production yarn run build --",
     "build:main": "webpack --config=webpack/bundles/main.babel.js",
     "build:renderer": "webpack --config=webpack/bundles/renderer.babel.js",
+    "test": "electron-mocha \"{test,src}/**/*.spec.js\"",
     "lint": "eslint src",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
@@ -45,14 +47,16 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-1": "^6.24.1",
+    "chai": "^4.1.2",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.0",
     "devtron": "^1.4.0",
     "dotenv": "^4.0.0",
-    "electron": "^1.7.5",
+    "electron": "1.7.6",
     "electron-builder": "^19.27.2",
     "electron-debug": "^1.4.0",
     "electron-devtools-installer": "^2.2.0",
+    "electron-mocha": "^4.0.2",
     "enhanced-resolve": "^3.4.1",
     "eslint": "^4.5.0",
     "eslint-config-airbnb": "^15.1.0",
@@ -68,6 +72,7 @@
     "html-webpack-harddisk-plugin": "^0.1.0",
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
+    "mocha": "^3.5.0",
     "postcss": "^6.0.1",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^10.0.0",
@@ -76,6 +81,7 @@
     "prop-types": "^15.5.10",
     "react-hot-loader": "^3.0.0-beta.7",
     "rimraf": "^2.6.1",
+    "spectron": "^3.7.2",
     "style-loader": "^0.18.2",
     "stylelint": "^7.8.0",
     "stylelint-config-css-modules": "^1.0.0",
