--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,10 @@ STATS=true
 # default: false
 DL_EXTENSIONS=true
 
+# Spectron before and after hooks timeout
+# default: 10000
+SPECTRON_TIMEOUT=10000
+
 # Github access token.
 # Required for github auto updates with private repositories.
 # https://github.com/electron-userland/electron-builder/wiki/Auto-Update#private-github-update-repo
