--- a/.eslintrc
+++ b/.eslintrc
@@ -53,7 +53,8 @@
     "comma-dangle": ["error", "never"],
     "array-bracket-spacing": ["error", "always"],
     "semi": ["error", "never"],
-    "global-require": "off",
+		"global-require": "off",
+		"func-names": "off",
     "class-methods-use-this": "off",
     "react/forbid-prop-types": "off",
     "react/require-default-props": "off",
