--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "build:prod": "cross-env NODE_ENV=production yarn run build --",
     "build:main": "webpack --config=webpack/bundles/main.babel.js",
     "build:renderer": "webpack --config=webpack/bundles/renderer.babel.js",
-    "test": "electron-mocha \"{test,src}/**/*.spec.js\"",
-    "lint": "eslint src",
+    "test": "yarn run test:unit && yarn run test:e2e",
+    "test:unit": "electron-mocha \"{test,src}/**/*.spec.js\"",
+    "test:e2e": "mocha test/e2e/test.js",
+    "lint": "eslint src test scripts",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
     "dist:win": "electron-builder --win",
@@ -48,6 +50,7 @@
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-1": "^6.24.1",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.0",
     "devtron": "^1.4.0",
