gitlab ci tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ variables:
 stages:
   - build
   - test
+  - prepublish
   - publish
 
 ########################################
@@ -24,12 +25,27 @@ build:
   stage: build
   script:
     - yarn install --pure-lockfile
-    - yarn run build:prod
+    - yarn run build:test
+
+test:
+  stage: test
+  script:
+    - yarn run test:unit
+
+e2e:
+  stage: test
+  script:
+    - yarn run test:e2e
 
 lint:
   stage: test
   script:
     - yarn run lint
+
+build:prod:
+  stage: prepublish
+  script:
+    - yarn run build:prod
 
 dist:
   stage: publish
