Added travis ci spectron timeout

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ env:
   global:
     - ELECTRON_CACHE="$HOME/.cache/electron"
     - ELECTRON_BUILDER_CACHE="$HOME/.cache/electron-builder"
+    - SPECTRON_TIMEOUT=10000
 
 cache:
   yarn: true
