--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "license": "MIT",
   "copyright": "© 2017 - Gabriela Seabra",
   "homepage": "https://github.com/gabiseabra/electron-boilerplate",
+  "bugs": "https://github.com/gabiseabra/electron-boilerplate/issues",
   "repository": {
     "type": "git",
     "url": "https://github.com/gabiseabra/electron-boilerplate.git"
